# grpc-gateway

./: MODULE.bazel
